<resources>
    <string name="app_name">CFT</string>
    <string name="paymentSystem">Платежная система</string>
    <string name="cardType">Тип карты</string>
    <string name="country">Страна</string>
    <string name="bankName">Банк</string>
    <string name="website">Сайт</string>
    <string name="bankPhone">Телефон</string>
    <string name="search">Найти</string>
    <string name="binWarning">не менее 6 цифр</string>
    <string name="call">позвонить </string>
    <string name="go_to_web">на сайт</string>
    <string name="go_to_map">к карте</string>
    <string name="requestHistory">История запросов</string>
    <string name="noPhone">Информации о номере нет на сервере</string>
    <string name="noWeb">Информации о сайте нет на сервере</string>
    <string name="noCountry">Информации о стране нет на сервере</string>
    <string name="titleWeb">Ошибка сети</string>
    <string name="descriptionWeb">Проверьте подключение к интернету, скорее всего проблема в этом</string>
    <string name="titleServer">Ошибка на стороне сервера</string>
    <string name="descriptionServer">Что-то не так на сервере.Возможно:\n\n
           ● Информации о вашей карте нет в базе.\n\n
           ● Ваша платежная система MIR.</string>
    <string name="posText">понятно</string>
    <string name="emptyBin">Введите BIN</string>

</resources>