<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/b"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".fragment.MainFragment">

    <EditText
        android:id="@+id/etBin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@drawable/tv_radius"
        android:backgroundTint="@color/w"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnRequest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnRequest"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/tv_radius"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="@+id/etBin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etBin"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="380dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/w"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/tv_radius"
                    android:backgroundTint="@color/e"
                    android:gravity="center"
                    android:text="@string/bankName"
                    android:textColor="@color/q" />

                <TextView
                    android:id="@+id/bankName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:gravity="center|center_vertical" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CardView9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/w"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/tv_radius"
                    android:backgroundTint="@color/e"
                    android:gravity="center"
                    android:text="@string/website"
                    android:textColor="@color/q" />

                <TextView
                    android:id="@+id/website"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="3"
                    android:gravity="center|center_vertical" />

                <ImageButton
                    android:id="@+id/btnWebSite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/btn_circle_shape"
                    android:backgroundTint="@color/r"
                    android:src="@drawable/ic_search"
                    tools:src="@drawable/ic_search" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CardView10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/w"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/tv_radius"
                    android:backgroundTint="@color/e"
                    android:gravity="center"
                    android:text="@string/bankPhone"
                    android:textColor="@color/q" />

                <TextView
                    android:id="@+id/bankPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="3"
                    android:gravity="center|center_vertical" />

                <ImageButton
                    android:id="@+id/btnPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/btn_circle_shape"
                    android:backgroundTint="@color/r"
                    android:src="@drawable/ic_baseline_local_phone_24" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="380dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBin"
        app:layout_constraintVertical_bias="0.0">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/tv_radius"
            android:backgroundTint="@color/w"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/w"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/tv_radius"
                    android:backgroundTint="@color/e"
                    android:gravity="center"
                    android:text="@string/paymentSystem"
                    android:textColor="@color/q" />

                <TextView
                    android:id="@+id/paymentSystem"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:backgroundTint="@color/w"
                    android:gravity="center|center_vertical" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/w"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/tv_radius"
                    android:backgroundTint="@color/e"
                    android:gravity="center"
                    android:text="@string/cardType"
                    android:textColor="@color/q" />

                <TextView
                    android:id="@+id/cardType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:gravity="center|center_vertical" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/w"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/tv_radius"
                    android:backgroundTint="@color/e"
                    android:gravity="center"
                    android:text="@string/country"
                    android:textColor="@color/q" />

                <TextView
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="3"
                    android:gravity="center|center_vertical" />

                <ImageButton
                    android:id="@+id/btnCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/btn_circle_shape"
                    android:backgroundTint="@color/r"
                    android:src="@drawable/ic_map" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHistory"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/tv_radius"
        android:backgroundTint="@color/e"
        android:gravity="center"
        android:text="@string/requestHistory"
        android:textColor="@color/q"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>